--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,10 @@ id should be used only once*/
 }
 
 .more-styles {
-    background-color: rgb(80,0,34);
+    background-color: rgb(80, 0, 34);
 }
 
-p{
+p {
     font-size: 20px;
     background-color: rgb(44, 39, 34);
 }
