--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 * {
-    background-color: darkslategray;
+    background-color: rgb(42, 53, 53);
     font-family: 'Courier New', Courier, monospace;
     color: aliceblue;
+    text-align: center;
 }
 
 body {
@@ -12,13 +13,12 @@ body {
 header {
     background-color: darkgreen;
     color: white;
-    height: 150px;
+    height: 50px;
 }
 
 nav ul {
     padding: auto;
     display: inline;
-    margin-top: 55px;
 }
 
 li {
@@ -27,25 +27,25 @@ li {
 }
 
 a:link {
-    color: green;
+    color: rgb(161, 100, 100);
     background-color: transparent;
     text-decoration: none;
 }
 
 a:visited {
-    color: pink;
+    color: rgb(65, 49, 52);
     background-color: transparent;
     text-decoration: none;
 }
 
 a:hover {
-    color: red;
+    color: rgb(168, 56, 56);
     background-color: transparent;
     text-decoration: underline;
 }
 
 a:active {
-    color: yellow;
+    color: rgb(255, 0, 0);
     background-color: transparent;
     text-decoration: underline;
 }
@@ -59,11 +59,14 @@ strong {
 }
 
 h1 {
-    font-size: larger;
+    font-size: 24px;
+    padding-block: 10px;
 }
 
 h2 {
     color: aliceblue;
+    margin: 50px;
+    font-size: 18px;
 }
 
 /*id and class
@@ -84,4 +87,5 @@ id should be used only once*/
 p {
     font-size: 20px;
     background-color: rgb(44, 39, 34);
+    margin: 50px;
 }
