--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 * {
-    background-color: rgb(42, 53, 53);
+    background-color: #3e4437;
     font-family: 'Courier New', Courier, monospace;
     color: aliceblue;
     text-align: center;
@@ -11,8 +11,8 @@ body {
 }
 
 header {
-    background-color: darkgreen;
-    color: white;
+    background-color: #a2ac94;
+    color: #404c24;
     height: 50px;
 }
 
@@ -23,29 +23,29 @@ nav ul {
 
 li {
     display: inline;
-    background-color: beige;
+    background-color: #cbccbc;
 }
 
 a:link {
-    color: rgb(161, 100, 100);
+    color: rgb(100, 110, 161);
     background-color: transparent;
     text-decoration: none;
 }
 
 a:visited {
-    color: rgb(65, 49, 52);
+    color: rgb(49, 51, 65);
     background-color: transparent;
     text-decoration: none;
 }
 
 a:hover {
-    color: rgb(168, 56, 56);
+    color: rgb(58, 56, 168);
     background-color: transparent;
     text-decoration: underline;
 }
 
 a:active {
-    color: rgb(255, 0, 0);
+    color: rgb(0, 26, 255);
     background-color: transparent;
     text-decoration: underline;
 }
@@ -66,6 +66,7 @@ h1 {
 h2 {
     color: aliceblue;
     margin: 50px;
+    padding: 25px;
     font-size: 18px;
 }
 
