added link to lighthouse report to README.md

--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,8 @@ body {
 }
 
 header {
-    background-color: #a2ac94;
-    color: #404c24;
+    background-color: #c4ccba;
+    color: #273013;
     height: 50px;
 }
 
